# explorers

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  atlas.json  recipe.json  test_fitness.rs
crates/explorers-app/: Cargo.toml
crates/explorers-genesis/: Cargo.toml
crates/explorers-genesis-eval/: Cargo.toml
crates/explorers-search/: Cargo.toml
crates/explorers-search/src/: bayesopt.rs  bifurcation.rs  gp.rs  lhs.rs  lib.rs  main.rs  prefilter.rs  qd.rs  search.rs  sobol.rs
crates/explorers-search/tests/: decomposer_emergence.rs
crates/explorers-sim/: Cargo.toml
docs/adr/: 0001-simulation-separate-from-renderer.md  0002-growth-co-limited-by-nutrient.md  0002-initial-ecology-design.md  0003-genesis-fitness-function.md  0003-nutrient-embodiment-and-reproductive-earmark.md  0004-minimal-genesis-simulation.md  0004-reproductive-nutrient-from-all-income.md  0005-spore-dispersal-reproduction.md  0006-event-driven-simulation.md
docs/agents/: architecture.md  domain.md
docs/ecology/: README.md  animals.md  bacteria-and-archaea.md  disturbance-and-succession.md  energy-flow.md  fungi.md  life-history-theory.md  nutrient-cycling.md  plants.md  spatial-ecology.md  trophic-roles.md
docs/research/: 354-simd-soa-spike.md  363-mapelites-spike.md  423-step-loop-profile.md  A-vectorised-stepper.md  B-es-qd-outer-search.md  E-surrogate-emulator.md  F-branching-validation.md  F-hopf-validation.md  F-mean-field-operator.md
docs/system-design/: README.md  dynamic-stability.md  execution-model.md  expected-properties.md  (+5 more)
scenarios/: README.md  example1.json  example10_predator_prey_hopf.json  example11_branching_coexistence.json  example12_generalist_dominance.json  example13_closed_web.json  example2.json  example3.json  example4.json  example4_consumer_tuning.json  example5.json  example6.json  example6_decomposer_viability.json  example7.json  example8.json  example9_detrital_pathway.json  observed.json  test.json  verdicts.md
(+20 files in other folders)
