[workspace]
members = ["crates/explorers-sim", "crates/explorers-app", "crates/explorers-genesis-eval", "crates/explorers-genesis", "crates/explorers-search"]
resolver = "3"

# Dependencies are always optimised — they rarely change and compile once.
[profile.dev.package."*"]
opt-level = 3

# explorers-sim is a numerical step loop; tests run it for millions of ticks
# (see tests/headless_decomposer.rs). Optimise it in dev/test builds too.
# (The old workspace-wide `[profile.dev] opt-level = 1` was Bevy's recommended
# tuning; Bevy has been removed, so that split now under-optimises the sim's own
# hot loop. Scoped to explorers-sim to keep fast dev compiles for the app crates.)
[profile.dev.package.explorers-sim]
opt-level = 3
